Fix: Width not respecting scrollbar

--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -56,7 +56,7 @@ input::selection {
 .Nav-bar {
    z-index: 100;
    height: 48px;
-   width: 100vw;
+   width: 100%;
    top: 0;
    left: 0;
    position: fixed;
@@ -127,7 +127,7 @@ input::selection {
 .Nav-mobile {
   transition: opacity 0.2s;
   background-color: white;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: fixed;
   left: 0;
@@ -139,7 +139,7 @@ input::selection {
 }
 
 .Cover {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -180,7 +180,7 @@ input::selection {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   background: white;
   color: $black;
 }
@@ -197,7 +197,7 @@ input::selection {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
